# marvel-rtos-new-ayush

./: .gitignore  .gitmodules  .mxproject  CMakeLists.txt  Makefile  Marvel_3W_DBCv1_1.dbc  Marvel_3W_DBCv1_1_Charging.dbc  README.md  STM32L476RETx_FLASH.ld  STM32Make.make  arm-none-eabi-gcc.cmake  buildAllFirmware.bat  eulerBuildProcess_BL_PRI_SEC.txt  flashAllFirmware.bat  mcuPinConfig_STM32L476RETx.ioc  openocd.cfg  patch_image_header.py  startup_stm32l476xx.s
Core/Inc/: adc.h  gpio.h  iwdg.h  main.h  stm32l4xx_hal_conf.h  stm32l4xx_it.h  tim.h
Core/Src/: adc.c  can.c  gpio.c  iwdg.c  main.c  spi.c  stm32l4xx_hal_timebase_tim.c  stm32l4xx_it.c  tim.c  usart.c  wwdg.c
Drivers/CMSIS/Device/ST/STM32L4xx/Include/: stm32l4xx.h
Tests/src/: mock_flashControls.c  mock_flashControls.h
Tests/unit_test_math/: test_conversion.c  test_crc.c  test_flashMemory.c
linkerScripts/: appPriLinker.ld  appSecLinker.ld  bootLdrLinker.ld  memoryMap.ld
